@@ -1,3 +1,6 @@
+* Tue Jun 10 2025 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.6.1
+- Fix rubocop issues
+
 * Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 0.6.0
 - [puppetsync] Updates for Puppet 8
   - These updates may include the following:
